Add workaround